// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PostInputTags - Snapshots > matches snapshot with empty tags 1`] = `
<div
  class="flex flex-wrap items-center gap-2"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-testid="tag-input-toggle"
  >
    <button
      data-testid="add-tag-button"
      data-variant="plain"
    >
      +
    </button>
  </div>
</div>
`;

exports[`PostInputTags - Snapshots > matches snapshot with input open 1`] = `
<div
  class="flex flex-wrap items-center gap-2"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-testid="tag-input-toggle"
  >
    <div
      data-container-variant="plain"
      data-testid="tag-input-wrapper"
    >
      <input
        data-testid="tag-input"
        value=""
      />
      <button
        aria-label="Open emoji picker"
        data-testid="emoji-button"
      >
        😀
      </button>
      <button
        aria-label="Close tag input"
        data-testid="close-button"
      >
        ×
      </button>
    </div>
  </div>
</div>
`;

exports[`PostInputTags - Snapshots > matches snapshot with tags 1`] = `
<div
  class="flex flex-wrap items-center gap-2"
  data-override-defaults="true"
  data-testid="container"
>
  <div
    data-testid="post-tag"
  >
    tag1
    <button
      data-testid="tag-close-tag1"
    >
      ×
    </button>
  </div>
  <div
    data-testid="post-tag"
  >
    tag2
    <button
      data-testid="tag-close-tag2"
    >
      ×
    </button>
  </div>
  <div
    data-testid="tag-input-toggle"
  >
    <button
      data-testid="add-tag-button"
      data-variant="plain"
    >
      +
    </button>
  </div>
</div>
`;
